# Realtek_RTS3917_Example_Package

./: 08_load_firmware  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile (copy)  README.md  S00+gaia  cmake_install.cmake  env.sh  fast_main.c  gaia  gaia.json  install_manifest.txt  main.c
