CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
project(example)

if (RTS_CHIP_TYPE MATCHES "RTS3917")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,--copy-dt-needed-entries -Wl,-rpath-link,${DIR_TMPFS}/lib")
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror")
	SET(DEPENDENT_LIBRARIES rtstream rtsvideo json-c)
	add_executable(example main.c)
	target_link_libraries(example ${DEPENDENT_LIBRARIES})
else ()
	message(FATAL_ERROR "Unsupported Board Model: " ${RTS_CHIP_TYPE})
endif ()
